--- a/package.json
+++ b/package.json
@@ -80,11 +80,13 @@
     "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0",
     "slug": "^1.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.4.1",
+    "tslog": "3.2.2",
     "typescript": "^3.6.3",
     "validator": "^11.1.0",
-    "tslog": "3.2.2",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
