Small fixes required because of "problems" between "different" dependencies in frontend and backend

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "esModuleInterop": true,
     "paths": {
       "@badeball/cypress-cucumber-preprocessor/*": ["./node_modules/@badeball/cypress-cucumber-preprocessor/dist/subpath-entrypoints/*"]
-    }
+    },
+    "baseUrl": "./"
   },
   "include": [
     "src/*.ts",
