--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
     
 jobs:
   docker:
-    timeout-minutes: 10
+    timeout-minutes: 3
     runs-on: ubuntu-latest
 
     steps:
@@ -19,4 +19,8 @@ jobs:
       run: cp .env.template .env
 
     - name: Start containers
-      run: docker-compose up
+      run: docker-compose up --detach
+
+    - name: Wait a little
+      run: sleep 10
+      
