--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "cypress-cucumber-preprocessor": "^4.0.0",
     "dotenv-cli": "^5.1.0",
     "husky": "^4.2.3",
-    "swagger-autogen": "^2.23.1"
+    "swagger-autogen": "^2.23.1",
+    "typedoc": "^0.25.2"
   }
 }
