--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,9 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v1
 
+    - name: Check Node
+      run: node --version
+
     - name: set environment
       run: cp .env.template .env
 
