--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,9 +42,6 @@ jobs:
 
     - name: Wait a little
       run: sleep 10
-      
-    - name: Check http status code of pages
-      uses: lakuapik/gh-actions-http-status@v1
-      with:
-        sites: '["http://localhost:3000", "http://localhost:3000/join"]'
-        expected: '[200, 200]'
+
+    - name: Smoke test
+      run: ./smoke-test.sh
